post-stack fixes

--- a/post-stack.yaml
+++ b/post-stack.yaml
@@ -12,14 +12,15 @@
 
     - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
       include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}"
+      when: job_type is defined
       failed_when: False
       tags: always
 
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      failed_when: False
-      when: network_type is defined
-      tags: always
+    # - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
+      # include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
+      # failed_when: False
+      # when: network_type is defined and job_type is defined
+      # tags: always
       
     - name: Configure compute node trunk
       include_tasks: tasks/configure-compute-trunk.yaml
