--- a/collect-logs-master.yaml
+++ b/collect-logs-master.yaml
@@ -12,6 +12,7 @@
 
     - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
       include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}"
+      when: job_type is defined
       failed_when: False
       tags: always
 
@@ -24,7 +25,7 @@
     - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
       include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
       failed_when: False
-      when: network_type is defined
+      when: network_type is defined and job_type is defined
       tags: always
 
     - name: Copy build files to log folder
