fixed log collect and include variables tasks

--- a/prep-env.yaml
+++ b/prep-env.yaml
@@ -15,6 +15,12 @@
       when: job_type is defined
       tags: always
 
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
+      failed_when: False
+      when: job_type is not defined and network_type is defined
+      tags: always
+
     - include: tasks/boot-instance.yaml
       with_items: "{{ vms }}"
       loop_control:
