--- a/build-win2016-compute.yaml
+++ b/build-win2016-compute.yaml
@@ -17,9 +17,9 @@
       failed_when: False
       tags: always
 
-    - name: Include variables from group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      when: network_type is defined and job_type is defined
+    - name: Include variables from group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}"
+      when: network_type is defined and job_type is not defined
       failed_when: False
       tags: always
       
