--- a/collect-logs-master.yaml
+++ b/collect-logs-master.yaml
@@ -16,16 +16,10 @@
       failed_when: False
       tags: always
 
-    - name: Include variables from group_vars/devstack-{{ zuul_project | basename }}-{{ network_type }}
-      include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ network_type }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
+      when: job_type is not defined and network_type is defined
       failed_when: False
-      when: network_type is defined and job_type is not defined
-      tags: always
-
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      failed_when: False
-      when: network_type is defined and job_type is defined
       tags: always
 
     - name: Copy build files to log folder
@@ -58,9 +52,9 @@
       set_fact: log_dst="/srv/logs/debug/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ job_type }}/{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M-%S') }}"
       when: debug_job is defined and debug_job and job_type is defined
 
-    - name: Set log destination for debug job with job_type and network_type
-      set_fact: log_dst="/srv/logs/debug/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ job_type }}/{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M-%S') }}"
-      when: debug_job is defined and debug_job and job_type is defined and network_type is defined
+    - name: Set log destination for debug job with job_type
+      set_fact: log_dst="/srv/logs/debug/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ network_type }}/{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M-%S') }}"
+      when: debug_job is defined and debug_job and job_type is not defined and network_type is defined
 
     - name: Set log destination for normal job
       set_fact: log_dst="/srv/logs/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}"
@@ -71,8 +65,8 @@
       when: (debug_job is not defined or not debug_job) and job_type is defined
 
     - name: Set log destination for normal job with job_type and network_type
-      set_fact: log_dst="/srv/logs/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ job_type }}"
-      when: (debug_job is not defined or not debug_job) and job_type is defined and network_type is defined
+      set_fact: log_dst="/srv/logs/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ network_type }}"
+      when: (debug_job is not defined or not debug_job) and job_type is not defined and network_type is defined
       
     - name: Make sure log server folder is empty
       shell: |
