--- a/collect-logs-win.yaml
+++ b/collect-logs-win.yaml
@@ -31,12 +31,6 @@
       failed_when: False
       tags: always
 
-    - name: Include variables from group_vars/devstack-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      when: job_type is defined and network_type is defined
-      failed_when: False
-      tags: always
-
     - name: Include variables from group_vars/win2016-compute
       include_vars: "group_vars/win2016-compute"
       failed_when: False
@@ -53,9 +47,9 @@
       failed_when: False
       tags: always
 
-    - name: Include variables from group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      when: network_type is defined and job_type is defined
+    - name: Include variables from group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}"
+      when: network_type is defined and job_type is not defined
       failed_when: False
       tags: always
       
@@ -70,9 +64,9 @@
       failed_when: False
       tags: always
       
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      when: job_type is defined and network_type is defined
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
+      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
