--- a/post-stack.yaml
+++ b/post-stack.yaml
@@ -16,12 +16,12 @@
       failed_when: False
       tags: always
 
-    # - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}
-      # include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}-{{ network_type }}"
-      # failed_when: False
-      # when: network_type is defined and job_type is defined
-      # tags: always
-      
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
+      when: job_type is not defined and network_type is defined
+      failed_when: False
+      tags: always
+
     - name: Configure compute node trunk
       include_tasks: tasks/configure-compute-trunk.yaml
       with_items: "{{ groups['all'] }}"
@@ -144,6 +144,12 @@
     - name: Include job_type specific variables
       include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ job_type }}"
       when: job_type is defined
+      failed_when: False
+      tags: always
+
+    - name: Include network_type specific variables
+      include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ network_type }}"
+      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
