--- a/collect-logs-master.yaml
+++ b/collect-logs-master.yaml
@@ -64,7 +64,7 @@
       set_fact: log_dst="/srv/logs/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ job_type }}"
       when: (debug_job is not defined or not debug_job) and job_type is defined
 
-    - name: Set log destination for normal job with job_type and network_type
+    - name: Set log destination for normal job with network_type
       set_fact: log_dst="/srv/logs/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ network_type }}"
       when: (debug_job is not defined or not debug_job) and job_type is not defined and network_type is defined
       
