--- a/post-stack.yaml
+++ b/post-stack.yaml
@@ -89,6 +89,12 @@
       failed_when: False
       tags: always
 
+    - name: Include additional variables based on project network_type
+      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}"
+      when: job_type is not defined and network_type is defined
+      failed_when: False
+      tags: always
+
     - include: tasks/windows/join-ad.yaml
       when: join_ad is defined and join_ad
 
