--- a/tasks/windows/configure-ovs.yaml
+++ b/tasks/windows/configure-ovs.yaml
@@ -35,6 +35,16 @@
       when: result.rc == 0
       tags: configure-ovs
 
+    - name: Get dataplane_informations.yaml content
+      slurp:
+        src: "{{ win_dir.config }}\\dataplane_informations.yaml"
+      register: dataplane_informations
+
+    - name: Set compute_local_ip and compute_dataplane_interface_name variables
+      set_fact:
+        compute_local_ip: {{ (dataplane_informations['content'] | b64decode | from_yaml).compute_local_ip }}
+        compute_dataplane_interface_name: {{ (dataplane_informations['content'] | b64decode | from_yaml).compute_dataplane_interface_name }}
+
     - name: Check if {{ data_bridge_ovs }} exists
       win_shell: "ovs-vsctl --db=tcp:127.0.0.1:6640 show | Select-String -Pattern \"{{ data_bridge_ovs }}\""
       register: result
@@ -47,7 +57,7 @@
 
     - name: Add dataplane interface in {{ data_bridge_ovs }}
       win_shell: "ovs-vsctl --db=tcp:127.0.0.1:6640 add-port {{ data_bridge_ovs }} \"{{ compute_dataplane_interface_name }}\""
-      when: compute_dataplane_interface_name is defined
+      when: compute_dataplane_interface_name is defined and result.stdout == ""
       tags: configure-ovs
 
     - name: Enable {{ data_bridge_ovs }} adapter
@@ -56,5 +66,5 @@
 
     - name: Add dataplane interface ip on {{ data_bridge_ovs }}
       win_shell: "New-NetIPAddress -IPAddress {{ compute_local_ip }} -InterfaceAlias {{ data_bridge_ovs }} -PrefixLength 22"
-      when: compute_local_ip is defined
+      when: compute_local_ip is defined and result.stdout == ""
       tags: configure-ovs
