--- a/build-win2016.yaml
+++ b/build-win2016.yaml
@@ -53,18 +53,18 @@
 
     - name: Check if dataplane informations variable file exists
       win_stat:
-        path: "{{ win_dir.config }}\\dataplane_informations.yaml"
+        path: "{{ win_dir.etc }}\\dataplane_informations.yaml"
       register: result
 
     - name: Create dataplane_informations.yaml file
       win_file:
-        path: "{{ win_dir.config }}\\dataplane_informations.yaml"
+        path: "{{ win_dir.etc }}\\dataplane_informations.yaml"
         state: touch
       when: result.stat.exists == False
 
     - name: Add dataplane interface informations in dataplane_informations.yaml
       win_lineinfile:
-        path: "{{ win_dir.config }}\\dataplane_informations.yaml"
+        path: "{{ win_dir.etc }}\\dataplane_informations.yaml"
         line: "{{ item }}"
       with_items:
         - "compute_local_ip: {{ compute_local_ip }}"
