minor fix on local.conf file

--- a/templates/devstack/local.conf
+++ b/templates/devstack/local.conf
@@ -33,7 +33,7 @@ NETWORK_GATEWAY="172.20.0.1"
 FLOATING_RANGE="172.24.4.0/24"
 PUBLIC_NETWORK_GATEWAY="172.24.4.1"
 PUBLIC_INTERFACE={{ data_interface }}
-{% if enable_tenant_tunnels %}
+{% if local_conf.enable_tenant_tunnels %}
 TUNNEL_ENDPOINT_IP={{ ansible_all_ipv4_addresses | ipaddr('192.168.0.0/22') | first }}
 {% endif %}
 
