--- a/templates/devstack/local.conf
+++ b/templates/devstack/local.conf
@@ -17,10 +17,10 @@ IP_VERSION={{ local_conf.ip_version }}
 
 Q_PLUGIN=ml2
 Q_ML2_PLUGIN_MECHANISM_DRIVERS=openvswitch,hyperv
-Q_ML2_TENANT_NETWORK_TYPE={{ q_ml2_tenant_network_type }}
+Q_ML2_TENANT_NETWORK_TYPE={{ local_conf.q_ml2_tenant_network_type }}
 Q_USE_PROVIDERNET_FOR_PUBLIC=False
-ENABLE_TENANT_VLANS={{ enable_tenant_vlans }}
-ENABLE_TENANT_TUNNELS={{ enable_tenant_tunnels }}
+ENABLE_TENANT_VLANS={{ local_conf.enable_tenant_vlans }}
+ENABLE_TENANT_TUNNELS={{ local_conf.enable_tenant_tunnels }}
 TENANT_VLAN_RANGE={{ local_conf.tenant_vlan_range }}
 PHYSICAL_NETWORK=physnet1
 OVS_ENABLE_TUNNELING=True
@@ -33,7 +33,7 @@ NETWORK_GATEWAY="172.20.0.1"
 FLOATING_RANGE="172.24.4.0/24"
 PUBLIC_NETWORK_GATEWAY="172.24.4.1"
 PUBLIC_INTERFACE={{ data_interface }}
-{% if enable_tenant_tunnels %}
+{% if local_conf.enable_tenant_tunnels %}
 TUNNEL_ENDPOINT_IP={{ ansible_all_ipv4_addresses | ipaddr('192.168.0.0/22') | first }}
 {% endif %}
 
