minor fix on naming

--- a/tasks/configure-fibrechannel.yaml
+++ b/tasks/configure-fibrechannel.yaml
@@ -2,7 +2,7 @@
   shell: "openstack hypervisor show {{ hostvars[item].compute_host }} -c host_ip -f value"
   register: compute_ip
 
-- name: Set port trunk
+- name: Configure FibreChannel adapter
   shell: "/usr/local/bin/wsmancmd -s -H {{ compute_ip.stdout }} -a certificate -c {{ win_crt }} -k {{ win_key }}
           'powershell Add-VMFibreChannelHba -VMName {{ hostvars[item].compute_instance_name }} -SanName vsan'"
   args:
