--- a/tasks/devstack/install-python-packages.yaml
+++ b/tasks/devstack/install-python-packages.yaml
@@ -4,3 +4,8 @@
       name: "{{ python_packages }}"
     become: True
 
+  - name: Install required python packages
+    pip:
+      executable: pip2
+      name: "{{ python_packages }}"
+    become: True
