--- a/wait-for-env.yaml
+++ b/wait-for-env.yaml
@@ -18,6 +18,23 @@
 
   tasks:
 
+  - name: Include variables from job_vars/{{ zuul_project | basename }}
+    include_vars: "job_vars/{{ zuul_project | basename }}"
+    failed_when: False
+    tags: always
+
+  - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
+    include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}"
+    failed_when: False
+    when: job_type is defined
+    tags: always
+
+  - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
+    include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
+    failed_when: False
+    when: job_type is not defined and network_type is defined
+    tags: always
+
   - name: Configure FibreChannel
     include: tasks/configure-fibrechannel.yaml
     with_items: "{{ groups['all'] }}"
