--- a/wait-for-env.yaml
+++ b/wait-for-env.yaml
@@ -32,7 +32,7 @@
   - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
     include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
     failed_when: False
-    when: job_type is not defined and network_type is defined
+    when: (vsan_name is defined and vsan_name) and (job_type == "fc" and job_type)
     tags: always
 
   - name: Configure FibreChannel
@@ -40,7 +40,7 @@
     with_items: "{{ groups['all'] }}"
     loop_control:
       loop_var: node
-    when: job_type == "fc" and (vsan_name is defined and vsan_name)
+    when: (vsan_name is defined and vsan_name) and (job_type == "fc" and job_type)
 
 - hosts: all
   gather_facts: no
