--- a/templates/windows/neutron-ovs-agent.conf
+++ b/templates/windows/neutron-ovs-agent.conf
@@ -27,7 +27,7 @@ firewall_driver = openvswitch
 local_ip = {{ compute_local_ip }}
 tunnel_bridge = br-tun
 integration_bridge=br-int
-ovsdb_connection=unix:\ProgramData\openvswitch\db.sock
 tenant_network_type=vxlan
-of_interface = ovs-ofctl
-ovsdb_interface = vsctl
+ovsdb_connection = {{ ovsdb_connection | default("unix:\ProgramData\openvswitch\db.sock") }}
+of_interface = {{ of_interface | default("ovs-ofctl") }}
+ovsdb_interface = {{ ovsdb_interface | default("vsctl") }}
