neutron-ovs-agent service changes (#8)
* neutron-ovs-agent ovs section changes

* parametrized ovs paramters in neutron-ovs-agent config

* removed unused lines from neutron-ovs-agent.conf file

* change patchset version for change 567621

* minor fix

* minor fix

* changed default values for neutron-ovs-agent params in ovs section

--- a/templates/windows/neutron-ovs-agent.conf
+++ b/templates/windows/neutron-ovs-agent.conf
@@ -28,6 +28,7 @@ local_ip = {{ compute_local_ip }}
 tunnel_bridge = br-tun
 integration_bridge=br-int
 tenant_network_type=vxlan
-ovsdb_connection = {{ ovsdb_connection | default("unix:\ProgramData\openvswitch\db.sock") }}
-of_interface = {{ of_interface | default("ovs-ofctl") }}
-ovsdb_interface = {{ ovsdb_interface | default("vsctl") }}
+ovsdb_connection = {{ ovsdb_connection | default("tcp:127.0.0.1:6640") }}
+of_interface = {{ of_interface | default("native") }}
+ovsdb_interface = {{ ovsdb_interface | default("native") }}
+
