--- a/tasks/devstack/install-pip.yaml
+++ b/tasks/devstack/install-pip.yaml
@@ -4,8 +4,14 @@
       dest: /tmp/get-pip.py
     tags: install-pip
 
+  - name: Create constraints file for {{ pip_version }}
+    copy:
+      dest: "/tmp/constraints.txt"
+      content: |
+        {{ pip_version }}
+
   - name: Install pip version {{ pip_version }}
-    shell: "{{ item }} /tmp/get-pip.py {{ pip_version }}"
+    shell: "{{ item }} /tmp/get-pip.py -c /tmp/constraints.txt pip"
     become: True
     with_items:
       - python2.7
