Ara reports feature (#16)
* generate ara static report

* use shell module instead of command module

* minor change

* changed tasks order

* modified install networking-hyperv task

* minor change

* modified install networking-hyperv for ansible 2.7.0

--- a/collect-logs-master.yaml
+++ b/collect-logs-master.yaml
@@ -44,6 +44,10 @@
         done
       failed_when: False
 
+    - name: Generate ara static report
+      command: "ara generate html {{ log_path }}/ara-report"
+      failed_when: False
+
     - name: Set log destination for debug job
       set_fact: log_dst="/srv/logs/debug/{{ zuul_project | basename }}/{{ zuul_change }}/{{ zuul_patchset }}/{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M-%S') }}"
       when: debug_job is defined and debug_job and job_type is not defined
