--- a/tasks/devstack/install-networking-hyperv.yaml
+++ b/tasks/devstack/install-networking-hyperv.yaml
@@ -1,7 +1,8 @@
   - name: Install networking-hyperv
     pip:
       executable: pip2
-      name: -e /opt/stack/networking-hyperv
+      name: /opt/stack/networking-hyperv
       extra_args: -c /opt/stack/requirements/upper-constraints.txt
+      editable: yes
     become: True
     tags: networking-hyperv
