fix for https://review.openstack.org/#/c/604168 (#24)
* add PUBLIC_PHYSICAL_NETWORK

* add PUBLIC_BRIDGE

* remove Q_USE_PROVIDERNET_FOR_PUBLIC

* NAT VM internet traffic

--- a/templates/devstack/local.conf
+++ b/templates/devstack/local.conf
@@ -18,7 +18,6 @@ IP_VERSION={{ local_conf.ip_version }}
 Q_PLUGIN=ml2
 Q_ML2_PLUGIN_MECHANISM_DRIVERS=openvswitch,hyperv
 Q_ML2_TENANT_NETWORK_TYPE={{ local_conf.q_ml2_tenant_network_type }}
-Q_USE_PROVIDERNET_FOR_PUBLIC=False
 ENABLE_TENANT_VLANS={{ local_conf.enable_tenant_vlans }}
 ENABLE_TENANT_TUNNELS={{ local_conf.enable_tenant_tunnels }}
 TENANT_VLAN_RANGE={{ local_conf.tenant_vlan_range }}
@@ -33,6 +32,8 @@ NETWORK_GATEWAY="172.20.0.1"
 FLOATING_RANGE="172.24.4.0/24"
 PUBLIC_NETWORK_GATEWAY="172.24.4.1"
 PUBLIC_INTERFACE={{ data_interface }}
+PUBLIC_PHYSICAL_NETWORK=physnet1
+PUBLIC_BRIDGE=br-data
 {% if local_conf.enable_tenant_tunnels %}
 TUNNEL_ENDPOINT_IP={{ ansible_all_ipv4_addresses | ipaddr('192.168.0.0/22') | first }}
 {% endif %}
