fix for failed tempest tests (#25)
* use security groups firewall driver from networking-hyperv

* add networking-hyperv for neutron builds

* disabled wmi cache in neutron config

* add networking-hyperv package for all ci jobs

* excluded tempest.scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern test

* fixed indentation

--- a/templates/windows/neutron-ovs-agent.conf
+++ b/templates/windows/neutron-ovs-agent.conf
@@ -22,7 +22,7 @@ worker_count = 4
 physical_network_vswitch_mappings = physnet1:{{ data_bridge_ovs }}
 [SECURITYGROUP]
 enable_security_group = True
-firewall_driver = openvswitch
+firewall_driver = hyperv
 [ovs]
 local_ip = {{ compute_local_ip }}
 tunnel_bridge = br-tun
@@ -31,4 +31,5 @@ tenant_network_type=vxlan
 ovsdb_connection = {{ ovsdb_connection | default("tcp:127.0.0.1:6640") }}
 of_interface = {{ of_interface | default("native") }}
 ovsdb_interface = {{ ovsdb_interface | default("native") }}
-
+[os_win]
+cache_temporary_wmi_objects = False
