--- a/post-stack.yaml
+++ b/post-stack.yaml
@@ -5,20 +5,14 @@
     - zuul-params.yaml
 
   tasks:
-    - name: Include variables from job_vars/{{ zuul_project | basename }}
-      include_vars: "job_vars/{{ zuul_project | basename }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
       failed_when: False
       tags: always
 
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
       when: job_type is defined
-      failed_when: False
-      tags: always
-
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
-      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
@@ -79,19 +73,13 @@
 
   tasks:
     - name: Include additional variables based on project
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}"
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
       failed_when: False 
       tags: always
 
     - name: Include additional variables based on project job_type
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}"
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
       when: job_type is defined
-      failed_when: False
-      tags: always
-
-    - name: Include additional variables based on project network_type
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}"
-      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
@@ -144,19 +132,13 @@
 
   tasks:
     - name: Include additional variables based on project
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}"
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
       failed_when: False
       tags: always
 
     - name: Include additional variables based on project job_type
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ job_type }}"
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
       when: job_type is defined
-      failed_when: False
-      tags: always
-
-    - name: Include additional variables based on project network_type
-      include_vars: "group_vars/win2016-compute-{{ zuul_project | basename }}-{{ network_type }}"
-      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
@@ -171,20 +153,14 @@
     - zuul-params.yaml
 
   tasks:
-    - name: Include variables from group_vars/devstack-{{ zuul_project | basename }}
-      include_vars: "group_vars/devstack-{{ zuul_project | basename }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
       failed_when: False
       tags: always 
 
     - name: Include job_type specific variables
-      include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ job_type }}"
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
       when: job_type is defined
-      failed_when: False
-      tags: always
-
-    - name: Include network_type specific variables
-      include_vars: "group_vars/devstack-{{ zuul_project | basename }}-{{ network_type }}"
-      when: job_type is not defined and network_type is defined
       failed_when: False
       tags: always
 
