--- a/prep-env.yaml
+++ b/prep-env.yaml
@@ -4,21 +4,15 @@
     - zuul-params.yaml
 
   tasks:
-    - name: Include variables from job_vars/{{ zuul_project | basename }}
-      include_vars: "job_vars/{{ zuul_project | basename }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
       failed_when: False
       tags: always
 
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}"
+    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
       failed_when: False
       when: job_type is defined
-      tags: always
-
-    - name: Include variables from job_vars/{{ zuul_project | basename }}-{{ network_type }}
-      include_vars: "job_vars/{{ zuul_project | basename }}-{{ network_type }}"
-      failed_when: False
-      when: job_type is not defined and network_type is defined
       tags: always
 
     - include: tasks/boot-instance.yaml
