force amqp from latest version to 2.3.2 (#37)
* force amqp from latest version to 2.3.2

* replace amqp version from latest to 2.3.2

* minor fix for task location in playbooks

* minor fix

--- a/build-devstack.yaml
+++ b/build-devstack.yaml
@@ -44,6 +44,13 @@
     - include: tasks/devstack/install-zuul.yaml
     - include: tasks/devstack/prepare-git-repos.yaml
 
+    ## replace amqp version from 2.4.0 to 2.3.2
+    - name: Change amqp version from 2.4.0 to 2.3.2
+      replace:
+        dest: "{{ devstack_dir.stack }}/requirements/upper-constraints.txt"
+        regexp: '(^amqp+.*)'
+        replace: 'amqp===2.3.2'
+
     - name: Applying cherry-picks
       cb_cherry_pick_devstack:
         url: "{{ git_server }}/{{ item.project }}"
