Collect traceback if any service fails to start (#42)
* Create traceback log file if neutron agents are down

* Fixed tasks of traceback collect if neutron agents are down

* Create traceback log file if nova services are down

* Minor fix

* Create traceback log file if cinder services are down

* minor fix

* removed testing tags

* fixed nova_config variable

* test nova with lastest bump on os-vif - 1.14.0

* ensure upper_constraints_pinning variables are defined

* use @petrutlucian94 fix for amqp on windows

* remove pinning of amqp to 2.3.2 on controller node

* created files for collect traceback tasks for each service

* minor fixes

--- a/tasks/devstack/check-devstack-cinder-services.yaml
+++ b/tasks/devstack/check-devstack-cinder-services.yaml
@@ -19,6 +19,6 @@
       debug: var=cinder_service_check.stdout_lines
 
     - name: Fail when cinder-volume is down
-      fail:
+      debug:
         msg: "cinder-volume is down"
       when: cinder_service_check.rc != 0
