--- a/post-stack.yaml
+++ b/post-stack.yaml
@@ -169,6 +169,61 @@
     - include: tasks/devstack/check-devstack-cinder-services.yaml
       when: zuul_project == "openstack/cinder" or zuul_project == "openstack/os-brick"
 
+- hosts: win2016-compute
+  vars_files:
+    - zuul-params.yaml
+    - group_vars/windows
+
+  tasks:
+    - name: Include additional variables based on project
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
+      failed_when: False
+      tags: always
+
+    - name: Include additional variables based on project job_type
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
+      when: job_type is defined
+      failed_when: False
+      tags: always
+
+    - name: Get neutron_service_check content
+      set_fact:
+        neutron_service_check: "{{ groups['devstack'] | map('extract', hostvars, 'neutron_service_check') | list}}"
+
+    - name: Get nova_service_check content
+      set_fact:
+        nova_service_check: "{{ groups['devstack'] | map('extract', hostvars, 'nova_service_check') | list}}"
+
+    - name: Get cinder_service_check content
+      set_fact:
+        cinder_service_check: "{{ groups['devstack'] | map('extract', hostvars, 'cinder_service_check') | list}}"
+      when: zuul_project == "openstack/cinder" or zuul_project == "openstack/os-brick"
+
+    - include: tasks/windows/collect-traceback-neutron-services.yaml
+      when: neutron_service_check[0].rc != 0
+
+    - include: tasks/windows/collect-traceback-nova-services.yaml
+      when: nova_service_check[0].rc != 0
+
+    - include: tasks/windows/collect-traceback-cinder-services.yaml
+      when: (zuul_project == "openstack/cinder" or zuul_project == "openstack/os-brick") and cinder_service_check[0].rc != 0
+
+- hosts: devstack
+  vars_files: 
+    - zuul-params.yaml
+
+  tasks:
+    - name: Include variables from job_vars/{{ zuul_project | basename }}.yaml
+      include_vars: "job_vars/{{ zuul_project | basename }}.yaml"
+      failed_when: False
+      tags: always 
+
+    - name: Include job_type specific variables
+      include_vars: "job_vars/{{ zuul_project | basename }}-{{ job_type }}.yaml"
+      when: job_type is defined
+      failed_when: False
+      tags: always
+
     - include: tasks/devstack/discover-hosts.yaml
 
     - name: Restart nova api
