--- a/job_vars/cinder-smb.yaml
+++ b/job_vars/cinder-smb.yaml
@@ -248,8 +248,8 @@ services:
     name: cinder-volume
     description: OpenStack Cinder Volume Service
     binary: "{{ win_dir.python }}\\scripts\\cinder-volume.exe"
-    config: "{{ win_dir.etc }}\\cinder.conf"
-    template: cinder.conf
+    config: "{{ win_dir.etc }}\\cinder-volume.conf"
+    template: cinder-volume.conf
 
   - cinder-backup:
     name: cinder-backup
