nova use local ovs msi

--- a/job_vars/nova.yaml
+++ b/job_vars/nova.yaml
@@ -334,5 +334,5 @@ win_python_packages:
   - ovs
 
 data_bridge_ovs: br-ethernet
-ovs_msi_url: https://cloudbase.it/downloads/openvswitch-hyperv-2.7.0-certified.msi
+ovs_msi_url: http://10.100.0.9/ci/openvswitch-hyperv-2.7.0-certified.msi
 win2016_compute_node_ip: "{{ groups['win2016-compute'][0] }}"
