--- a/job_vars/neutron.yaml
+++ b/job_vars/neutron.yaml
@@ -322,4 +322,4 @@ vmswitches:
 
 data_bridge_ovs: br-ethernet
 win2016_compute_node_ip: "{{ groups['win2016-compute'][0] }}"
-ovs_msi_url: https://cloudbase.it/downloads/openvswitch-hyperv-2.7.0-certified.msi
+ovs_msi_url: http://10.100.0.9/ci/openvswitch-hyperv-2.7.0-certified.msi
