set backup_swift_object_size to 10MB for nova jobs
cinder backup goes oom http://paste.openstack.org/raw/748864/
Apr  4 09:09:07 n-d-637630-12 kernel: [ 6013.261209] Out of memory: Kill process 105598 (cinder-backup) score 84 or sacrifice child
Apr  4 09:09:07 n-d-637630-12 kernel: [ 6013.282144] Killed process 105598 (cinder-backup) total-vm:3024892kB, anon-rss:684460kB, file-rss:3432kB

--- a/job_vars/nova.yaml
+++ b/job_vars/nova.yaml
@@ -235,6 +235,7 @@ local_conf:
     image_volume_cache_enabled = False
     lvm_type = default
     [DEFAULT]
+    backup_swift_object_size = 10485760
     quota_volumes = 10
     quota_snapshots = 10
     quota_gigabytes = 1000
